--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "email": "zdhxiong@gmail.com"
   },
   "dependencies": {
+    "@hyperapp/router": "github:zdhxiong/hyperapp-router",
     "classcat": "^4.1.0",
     "highlight.js": "^10.2.0",
     "html-escaper": "^3.0.0",
@@ -81,15 +82,15 @@
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "prettier": "^2.1.1",
+    "prettier": "^2.1.2",
     "style-loader": "^1.2.1",
     "stylelint": "^13.7.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^20.0.0",
     "terser-webpack-plugin": "^3.1.0",
-    "webpack": "^4.44.1",
-    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack": "^4.44.2",
+    "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2",
